Traffic-Management-Basics/ms-demo/04-url-redirect-and-rewrite/virtualservice-demoapp.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demoapp
spec:
  hosts:
  - demoapp
  http:
  - name: redirect
    match:
    - uri:
        prefix: "/frontend"
    redirect:
      uri: /
      authority: frontend
      port: 80
  - name: canary
    match:
    - uri:
        prefix: /canary
    rewrite:
      uri: /
    route:
    - destination:
        host: demoapp
        subset: v2-canary
  - name: default
    route:
    - destination:
        host: demoapp
        subset: v2
